--- a/templates/header.html
+++ b/templates/header.html
@@ -19,6 +19,10 @@
 
                 <div class="user">{{user}} </div>
                 
+                {% if user.is_superuser %} 
+                <div class="superuser"><a href="#">To superuser Dash</a> </div>
+                {% endif%}
+
                 <div class="log"> <a href="{%url 'logout' %}">Logout</a>  </div>
            
         
