--- a/all_apps/Facts/templates/facts_templates/3_api_main_page.html
+++ b/all_apps/Facts/templates/facts_templates/3_api_main_page.html
@@ -51,7 +51,7 @@
             </div>
 
             <div>
-                <a href="#">To API documentation</a>
+                <a href="{%url 'schema-swagger-ui' %}" target="_blank">To API documentation</a>
             </div>
               
         </div>
