--- a/all_apps/Facts/templates/facts_templates/2_user_facts_page.html
+++ b/all_apps/Facts/templates/facts_templates/2_user_facts_page.html
@@ -12,9 +12,9 @@
             <a href="{% url 'api_info_main_page' %}">API</a>
     </div>
 
-    <div class="cell">
+    <!-- <div class="cell">
             <a href="">Make your facts public</a>
-    </div>
+    </div> -->
 
 </div>
 
