--- a/all_apps/Facts/templates/facts_templates/2_user_facts_page.html
+++ b/all_apps/Facts/templates/facts_templates/2_user_facts_page.html
@@ -9,7 +9,11 @@
 
     <div class="cell">
 
-            <a href="{% url 'api_info_main_page' %}">API</a>
+            <a href="{% url 'api_info_main_page' %}" id="delete_account">API</a>
+    </div>
+
+    <div class="cell">
+            <a href="{%url 'delete_account'%}" id="delete_account_view">Delete account and all facts</a>
     </div>
 
     <!-- <div class="cell">
@@ -176,6 +180,16 @@ api_key_fetch = '{{api_key_fetch}}'
     // const test_fact_fetch = document.currentScript.getAttribute('test_fact_fetch')
     // const api_key_fetch = document.currentScript.getAttribute('api_key_fetch')
     
+    
+    document.getElementById('delete_account_view').addEventListener('click', function(e){
+ 
+        if (!confirm("Delete account and all data?")){
+            e.preventDefault()
+        }
+
+
+    })
+  
 
     async function Loading(){
         await getCategories();
