--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -28,6 +28,15 @@
     </p>
 
     <div>
+        <p> 
+            The source code for the main repository of this project is 
+            <a href="https://github.com/shoko-nurs/RandomAppsRepo">here</a> .
+
+        </p>
+
+    </div>
+    
+    <div>
         <p>
             If you want to report some issue or a bug related to the BACKEND functionality(not Frontend,I know it kind
             of...sucks),
