Registration UX is fixed

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -13,6 +13,9 @@
 
     <p>My name is Nursultan Shokobalinov. I am a former Physics teacher.</br>
 
+        After I completed my master's degree in Scientific Computing, 
+        learning programming and anything related to it has become like a hobby to me. 
+
         Right now I am learning various tools in order to become a Sofware Developer
         with a backend concentration.</p>
 
