StudentMerit app is in development

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -6,7 +6,7 @@
     <div >
         <ol class="ol">
             <a href="{% url 'facts-main-page' %}"><li class='entry'> Facts  </li><a>
-            <!-- <a href="#"><li class='entry'> Warehouse +API </li><a> -->
+            <a href="{% url 'merit-main-page'%}"><li class='entry'> Student Merit </li><a>
             <!-- <a href="#"><li class='entry'> Client management system +API </li><a> -->
             <!-- <a href="#"><li class='entry'> Sync-Async  </li><a></a> -->
             <!-- <a href="#"><li class='entry'> GPU computing with PyOpenCL  </li><a></a>        -->
