--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -24,7 +24,7 @@
 
     <p>
         This website is implemented with the following:</br>
-        a) Backend: Python Django </br>
+        a) Backend: Python Django, GO lang </br>
         b) Frontend: Simple HTML, CSS, JavaScript, Fetch API + DRF (no SPA at this time) <br>
         c) DataBase: PostgreSQL: Heroku provided limited version, up to 20 concurrent connections</br>
 
