--- a/all_apps/StudentMerit/templates/merit_templates/1_merit_main_page.html
+++ b/all_apps/StudentMerit/templates/merit_templates/1_merit_main_page.html
@@ -165,6 +165,7 @@
     let endpoints = incoming.ep
     let ALL_ACTIONS = incoming.data
 
+    console.log(endpoints)
  
 
     // Save promist for future use
