--- a/all_apps/StudentMerit/templates/merit_templates/8_class_students.html
+++ b/all_apps/StudentMerit/templates/merit_templates/8_class_students.html
@@ -97,7 +97,7 @@
             `
                 <td>
                     
-                    <a href="${s.id}">  <button id=${s.id}_view_score>View Scores</button></a>
+                    <a href="/student_merit/manage_students/${s.id}">  <button id=${s.id}_view_score>View Scores</button></a>
                 
                 
                 </td>
