editing after heroku

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -11,7 +11,7 @@
 <div class="welcome-message">
     <p>Hello! </p>
 
-    <p>My name is Nursultan Shokobalinov. I am a former Physics teacher.</br>
+    <p>My name is Nursultan Shokobalinov. I am a Physics teacher.</br>
 
         After I completed my master's degree in Scientific Computing, 
         learning programming and anything related to it has become like a hobby to me. 
@@ -19,14 +19,14 @@
         Right now I am learning various tools in order to become a Sofware Developer
         with a backend concentration.</p>
 
-    <p>Welcome to my small Heroku hosted website, where hopefully I will place </br>
+    <p>Welcome to my small AWS hosted website, where hopefully I will place </br>
         unrelated to each other apps I made during my learning journey.</p>
 
     <p>
         This website is implemented with the following:</br>
         a) Backend: Python Django, GO lang </br>
         b) Frontend: Simple HTML, CSS, JavaScript, Fetch API + DRF (no SPA at this time) <br>
-        c) DataBase: PostgreSQL: Heroku provided limited version, up to 20 concurrent connections</br>
+        c) DataBase: AWS PostgreSQL</br>
         
     </p>
 
